stuff from lecture 11

--- a/exercises/lecture_9/solution/chembl_preparation.ipynb
+++ b/exercises/lecture_9/solution/chembl_preparation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b8309f2f",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ad46ea57",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1ee82be9",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "4   CHEMBL1167747  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bceb026d",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "4   CHEMBL1167747  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "d55bbd10",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
        "[300 rows x 7 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "aaa40695",
    "metadata": {},
    "outputs": [],
@@ -754,7 +754,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lecture9",
+   "display_name": "DSA103",
    "language": "python",
    "name": "python3"
   },
@@ -768,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
